--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #284786;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -19,4 +19,43 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.img {
+height: 300px;
+  /* background-image: url("./imgs/001_super-smash-bros-ultimate-cheats-4691750-1ab181e17b46400b81848611cfb08725.jpg"); */
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #6b81a1;
+  text-align: center;
+  font-size: 50px;
+  padding-top: 105px;
+  
+}
+
+.nav {
+  color: #0c51db;
+  font-size: 45px;
+  
+}
+
+.ppp {
+  background-color: #3772ca;
+  height: 1000px;
+  width:100%;
+  display: inline-block;
+ 
+
+}
+
+.characters{
+  display: inline-block;
+height: 250px;
+width: 250px;
+padding:20px;
+
+}
+.container {
+  margin:0px;
+  width: 100%!important;
 }
